--- a/src/app/admin/article-manager/view-article/view-article.component.html
+++ b/src/app/admin/article-manager/view-article/view-article.component.html
@@ -64,7 +64,6 @@
                                     <th [ngStyle]="{'text-align': 'center'}">Giá</th>
                                     <th [ngStyle]="{'text-align': 'center'}">Ngày bắt đầu</th>
                                     <th [ngStyle]="{'text-align': 'center'}">Ngày hết hạn</th>
-                                    <!-- <th>Người đăng</th> -->
                                     <th [ngStyle]="{'text-align': 'center'}">Trạng thái</th>
                                     <th [ngStyle]="{'text-align': 'center'}">Chức năng</th>
                                 </tr>
@@ -72,33 +71,16 @@
                             <tbody>
                                 <tr *ngFor="let article of article">
                                     <td [ngStyle]="{'text-align': 'center'}">#{{article.articleId}}</td>
-                                    <td [ngStyle]="{'text-align': 'center'}">
-                                        <div class="post_thumb">
-                                                <img src={{article?.image}}>
-                                        </div>
+                                    <td [ngStyle]="{'text-align': 'center'}" routerLink="detail-article/{{article.articleId}}">
+                                        <div class="post_thumb"><img src={{article?.image}}></div>
                                     </td>
                                     <td>
                                         <span class="badge badge-pill badge-warning">Phòng trọ</span>
                                         <span class="badge badge-pill badge-warning">Ở ghép</span>
 
-                                        <a class="post_title" target="_blank"
-                                            href="https://phongtro123.com/quan-ly/tin-dang.html#"
+                                        <a class="post_title" routerLink="detail-article/{{article.articleId}}"
                                             style="color: #055699;">{{article?.title}}
                                         </a>
-                                        <!-- <div class="post_btn_toolbar mt-3">
-                                            <a href="https://phongtro123.com/quan-ly/tin-dang/dang-lai-tin/312303"
-                                                class="btn btn-sm btn_danglai"><svg
-                                                    xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                                    viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                                                    class="feather feather-refresh-ccw">
-                                                    <polyline points="1 4 1 10 7 10"></polyline>
-                                                    <polyline points="23 20 23 14 17 14"></polyline>
-                                                    <path
-                                                        d="M20.49 9A9 9 0 0 0 5.64 5.64L1 10m22 4l-4.64 4.36A9 9 0 0 1 3.51 15">
-                                                    </path>
-                                                </svg> Đăng lại tin</a>
-                                        </div> -->
                                         <span style="display: block; color: #999; margin-top: 10px;">
                                             Cập nhật gần nhất: {{article?.lastUpdateTime | date:'dd/MM/yyyy'}}
                                         </span>
@@ -107,8 +89,8 @@
                                         <div class="post_price">{{article.roomPrice}}</div>
                                     </td>
                                     <td [ngStyle]="{'text-align': 'center'}">{{article.createTime | date:'dd/MM/yyyy - HH:mm'}}</td> 
-                                    <td [ngStyle]="{'text-align': 'center'}">{{article.lastUpdateTime | date:'dd/MM/yyyy - HH:mm'}}</td>
-                                    <!-- <td>{{article.customer.email}}</td> -->
+                                    <td [ngStyle]="{'text-align': 'center'}" *ngIf="article.expDate != null">{{article.expDate | date:'dd/MM/yyyy - HH:mm'}}</td>
+                                    <td [ngStyle]="{'text-align': 'center'}" *ngIf="article.expDate == null">-------</td>
                                     <td [ngStyle]="{'text-align': 'center'}">
                                         <span class="text text-warning" style="white-space: nowrap;">{{article?.status}}</span>
                                     </td>
