--- a/src/app/admin/customer-manager/view-customer/view-customer.component.html
+++ b/src/app/admin/customer-manager/view-customer/view-customer.component.html
@@ -35,10 +35,11 @@
                                 <tr>
                                     <th [ngStyle]="{'text-align': 'center'}">ID người dùng</th>
                                     <th [ngStyle]="{'text-align': 'center'}">Họ tên</th>
+                                    <th [ngStyle]="{'text-align': 'center'}">Email</th>
                                     <th [ngStyle]="{'text-align': 'center'}">Số dư TK</th>
-                                    <th [ngStyle]="{'text-align': 'center'}">CMND</th>
+                                    <!-- <th [ngStyle]="{'text-align': 'center'}">CMND</th> -->
                                     <th [ngStyle]="{'text-align': 'center'}">Địa chỉ</th>
-                                    <th [ngStyle]="{'text-align': 'center'}">Ngày sinh</th>
+                                    <!-- <th [ngStyle]="{'text-align': 'center'}">Ngày sinh</th> -->
                                     <th [ngStyle]="{'text-align': 'center'}">SĐT</th>
                                     <th [ngStyle]="{'text-align': 'center'}">Giới tính</th>
                                     <th [ngStyle]="{'text-align': 'center'}">Trạng thái</th>
@@ -51,10 +52,11 @@
                                     <!--// customers lấy từ class view-customer.components.ts -->
                                     <td [ngStyle]="{'text-align': 'center'}">#{{customer?.customerId}}</td>
                                     <td [ngStyle]="{'text-align': 'center'}">{{customer?.name}}</td>
+                                    <td [ngStyle]="{'text-align': 'center'}">{{customer?.email}}</td>
                                     <td [ngStyle]="{'text-align': 'center'}">{{customer?.accountBalance}}</td>
-                                    <td [ngStyle]="{'text-align': 'center'}">{{customer?.cardId}}</td>
+                                    <!-- <td [ngStyle]="{'text-align': 'center'}">{{customer?.cardId}}</td> -->
                                     <td [ngStyle]="{'text-align': 'center'}">{{customer?.address}}</td>
-                                    <td [ngStyle]="{'text-align': 'center'}">{{customer?.birthday | date:'dd/MM/yyyy'}}</td>
+                                    <!-- <td [ngStyle]="{'text-align': 'center'}">{{customer?.birthday | date:'dd/MM/yyyy'}}</td> -->
                                     <td [ngStyle]="{'text-align': 'center'}">{{customer?.phone}}</td>
                                     <td [ngStyle]="{'text-align': 'center'}" *ngIf="customer?.gender == true">Nam</td>
                                     <td [ngStyle]="{'text-align': 'center'}" *ngIf="customer?.gender == false">Nữ</td>
@@ -69,10 +71,10 @@
                                         <a routerLink="detail-customer/{{customer?.customerId}}" class="view"
                                             title="View" data-toggle="tooltip"><i
                                                 class="material-icons">&#xE417;</i></a>
-                                        <a routerLink="create-customer" class="edit" title="Edit"
-                                            data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a>
-                                        <a routerLink="../customer" class="delete" title="Delete"
-                                            data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a>
+                                        <!-- <a routerLink="create-customer" class="edit" title="Edit"
+                                            data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a> -->
+                                        <!-- <a routerLink="../customer" class="delete" title="Delete"
+                                            data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a> -->
                                     </td>
                                 </tr>
                             </tbody>
