--- a/src/app/client/profiles/article-manager/article-manager.component.html
+++ b/src/app/client/profiles/article-manager/article-manager.component.html
@@ -14,7 +14,7 @@
 
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="https://phongtro123.com/">Phongtro123.com</a></li>
+                            <li class="breadcrumb-item"><a href="https://phongtro123.com/">PhongtroThanhXuan.com</a></li>
                             <li class="breadcrumb-item"><a href="https://phongtro123.com/quan-ly/index.html">Quản lý</a></li>
                             <li class="breadcrumb-item active" aria-current="page">Danh sách tin đăng</li>
                         </ol>
@@ -44,8 +44,7 @@
                                     <a class="dropdown-item" href="https://phongtro123.com/quan-ly/tin-dang.html?status=hidden&amp;package=all">Tin đang ẩn</a>
                                 </div>
                             </div>
-                            <a class="btn btn-danger btn-sm d-none d-md-block" href="https://phongtro123.com/quan-ly/dang-tin-moi.html">Đăng tin mới</a>
-                            <div class="d-lg-none" style="width: 100%;"><a class="btn btn-danger btn-block mt-3" href="https://phongtro123.com/quan-ly/dang-tin-moi.html">Đăng tin mới</a></div>
+                            <a class="btn btn-danger btn-sm d-none d-md-block" routerLink="/profile/create-article">Đăng tin mới</a>
                         </div>
                     </div>
 
@@ -68,15 +67,15 @@
                                         <td>#{{article.articleId}}</td>
                                         <td>
                                             <div class="post_thumb">
-                                                <a href="https://phongtro123.com/quan-ly/tin-dang.html#" target="_blank">
+                                                <a routerLink="/detail-article/{{article.articleId}}">
                                                     <img src="{{article.image}}">
                                                 </a>
                                             </div>
                                         </td>
                                         <td>
-                                            <span class="badge badge-pill badge-warning">Phòng trọ</span>
-                                            <a class="post_title" target="_blank" href="https://phongtro123.com/quan-ly/tin-dang.html#"
-                                             style="color: #055699;">{{article.title}}</a>
+                                            <span class="badge badge-pill badge-warning" *ngIf="article.roommate == null">Phòng trọ</span>
+                                            <span class="badge badge-pill badge-warning" *ngIf="article.roommate != null">Tìm ở ghép</span>
+                                            <a class="post_title" routerLink="/detail-article/{{article.articleId}}"style="color: #055699;">{{article.title}}</a>
                                             <div class="post_btn_toolbar mt-3">
                                                 <a href="https://phongtro123.com/quan-ly/tin-dang/dang-lai-tin/312303" class="btn btn-sm btn_danglai"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-refresh-ccw"><polyline points="1 4 1 10 7 10"></polyline><polyline points="23 20 23 14 17 14"></polyline><path d="M20.49 9A9 9 0 0 0 5.64 5.64L1 10m22 4l-4.64 4.36A9 9 0 0 1 3.51 15"></path></svg> Đăng lại tin</a>
                                             </div>
@@ -91,9 +90,27 @@
                                             <span class="text text-warning" style="white-space: nowrap;">{{article.status}}</span>
                                         </td>
                                     </tr>
-
                                 </tbody>
                             </table>
+                            <nav aria-label="Page navigation example">
+                                <ul class="pagination">
+                                  <li class="page-item">
+                                    <a class="page-link" href="#" aria-label="Previous">
+                                      <span aria-hidden="true">&laquo;</span>
+                                      <span class="sr-only">Previous</span>
+                                    </a>
+                                  </li>
+                                  <li class="page-item" *ngFor="let item of arrayPage">
+                                      <a class="page-link" routerLink="/profile/article-manager" (click)="onPage(item)">{{item+1}}</a>
+                                  </li>
+                                  <li class="page-item">
+                                    <a class="page-link" href="#" aria-label="Next">
+                                      <span aria-hidden="true">&raquo;</span>
+                                      <span class="sr-only">Next</span>
+                                    </a>
+                                  </li>
+                                </ul>
+                              </nav>
                         </div>
                     </div>
 
