--- a/src/app/client/profiles/payment-history/payment-history.component.html
+++ b/src/app/client/profiles/payment-history/payment-history.component.html
@@ -37,7 +37,7 @@
                             <tbody>
                                 <tr *ngFor="let payment of paymentHistory">
                                     <td [ngStyle]="{'text-align': 'center'}">#{{payment.transactionId}}</td>
-                                    <td [ngStyle]="{'text-align': 'center'}">{{payment.date}}</td>
+                                    <td [ngStyle]="{'text-align': 'center'}">{{payment.date | date:'dd/MM/yyyy - HH:mm'}}</td>
                                     <td [ngStyle]="{'text-align': 'center'}">Paypal</td>
                                     <td [ngStyle]="{'text-align': 'center'}">{{payment.amount}}</td>
                                     <td [ngStyle]="{'text-align': 'center'}">{{payment.description}}</td>
@@ -46,6 +46,25 @@
                                 </tr>
                             </tbody>
                         </table>
+                        <nav aria-label="Page navigation example">
+                            <ul class="pagination">
+                              <li class="page-item">
+                                <a class="page-link" href="#" aria-label="Previous">
+                                  <span aria-hidden="true">&laquo;</span>
+                                  <span class="sr-only">Previous</span>
+                                </a>
+                              </li>
+                              <li class="page-item" *ngFor="let item of arrayPage">
+                                  <a class="page-link" routerLink="/profile/payment-history" (click)="onPage(item)">{{item+1}}</a>
+                              </li>
+                              <li class="page-item">
+                                <a class="page-link" href="#" aria-label="Next">
+                                  <span aria-hidden="true">&raquo;</span>
+                                  <span class="sr-only">Next</span>
+                                </a>
+                              </li>
+                            </ul>
+                          </nav>
                     </div>
                     <!-- pagination -->
 
