--- a/src/app/client/profiles/recharge-history/recharge-history.component.html
+++ b/src/app/client/profiles/recharge-history/recharge-history.component.html
@@ -39,7 +39,7 @@
                             <tbody>
                                 <tr *ngFor="let recharge of rechargeHistory">
                                     <td [ngStyle]="{'text-align': 'center'}">#{{recharge.transactionId}}</td>
-                                    <td [ngStyle]="{'text-align': 'center'}">{{recharge.date}}</td>
+                                    <td [ngStyle]="{'text-align': 'center'}">{{recharge.date | date:'dd/MM/yyyy - HH:mm'}}</td>
                                     <td [ngStyle]="{'text-align': 'center'}">Paypal</td>
                                     <td [ngStyle]="{'text-align': 'center'}">{{recharge.amount}}</td>
                                     <td [ngStyle]="{'text-align': 'center'}">{{recharge.description}}</td>
@@ -48,6 +48,25 @@
                                 </tr>
                             </tbody>
                         </table>
+                        <nav aria-label="Page navigation example">
+                            <ul class="pagination">
+                              <li class="page-item">
+                                <a class="page-link" href="#" aria-label="Previous">
+                                  <span aria-hidden="true">&laquo;</span>
+                                  <span class="sr-only">Previous</span>
+                                </a>
+                              </li>
+                              <li class="page-item" *ngFor="let item of arrayPage">
+                                  <a class="page-link" routerLink="/profile/recharge-history" (click)="onPage(item)">{{item+1}}</a>
+                              </li>
+                              <li class="page-item">
+                                <a class="page-link" href="#" aria-label="Next">
+                                  <span aria-hidden="true">&raquo;</span>
+                                  <span class="sr-only">Next</span>
+                                </a>
+                              </li>
+                            </ul>
+                          </nav>
                     </div>
                     <!-- pagination -->
 
