--- a/src/app/client/profiles/shared/sidebar/sidebar.component.html
+++ b/src/app/client/profiles/shared/sidebar/sidebar.component.html
@@ -110,7 +110,7 @@
                                 </svg> Bảng giá dịch vụ
                             </a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact: true}"  routerLink="/profile/Chưa có">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
                                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
@@ -120,7 +120,7 @@
                                     </path>
                                 </svg> Liên hệ
                             </a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact: true}"  routerLink="/">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
@@ -129,7 +129,7 @@
                                     <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
                                     <polyline points="16 17 21 12 16 7"></polyline>
                                     <line x1="21" y1="12" x2="9" y2="12"></line>
-                                </svg> Thoát
+                                </svg> Trang chủ
                             </a>
                         </li>
                     </ul>
