--- a/src/app/client/clients-page/detail-article/detail-article.component.html
+++ b/src/app/client/clients-page/detail-article/detail-article.component.html
@@ -199,6 +199,26 @@
                                 <form [formGroup]="commentForm" (ngSubmit)="postComment()">
                                     <div class="form-group row">
                                         <div class="radio-label">
+                                            Điểm đánh giá bài viết này : 
+                                        </div>
+                                        <div class="radio-star" *ngIf="comments?.avgStar < 1.5">
+                                            <span class="star-1"></span> <br>
+                                        </div>
+                                        <div class="radio-star" *ngIf="1.5<=comments?.avgStar && comments.avgStar < 2.5">
+                                            <span class="star-1"></span><span class="star-1"></span> <br>
+                                        </div>
+                                        <div class="radio-star" *ngIf="2.5<=comments?.avgStar && comments.avgStar < 3.5">
+                                            <span class="star-1"></span><span class="star-1"></span><span class="star-1"></span> <br>
+                                        </div>
+                                        <div class="radio-star" *ngIf="3.5<=comments?.avgStar && comments.avgStar < 4.5">
+                                            <span class="star-1"></span><span class="star-1"></span><span class="star-1"></span><span class="star-1"></span> <br>
+                                        </div>
+                                        <div class="radio-star" *ngIf="4.5<=comments?.avgStar">
+                                            <span class="star-1"></span><span class="star-1"></span><span class="star-1"></span><span class="star-1"></span><span class="star-1"></span> <br>
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <div class="radio-label">
                                             Đánh giá : 
                                         </div>
                                         <div class="radio-star" >
@@ -217,6 +237,7 @@
                                     <div class="form-group">
                                         <textarea class="form-control" [formControlName]="'comment'"  placeholder="Bình luận" rows="2"></textarea>
                                     </div>
+                                    <div class="loader detail" *ngIf="isloading"></div>
                                     <button type="submit" class="btn btn-primary  float-right" [disabled]="commentForm.invalid">Bình luận & Đánh giá</button>
                                 </form>
                             </div>
@@ -226,6 +247,7 @@
                                         <a routerLink="/user/comment.username"></a>
                                     </div> -->
                                     <div>
+                                        <b>{{data?.customer.name}} : </b>
                                         <span *ngIf="data.start == 1">
                                             <span class="star-1"></span>
                                         </span>
@@ -241,7 +263,6 @@
                                         <span *ngIf="data.start == 5">
                                             <span class="star-1"></span><span class="star-1"></span><span class="star-1"></span><span class="star-1"></span><span class="star-1"></span>
                                         </span>
-                                        <b>{{data?.customer.name}} : </b>
                                         <span>{{data.comment}}</span>
                                     </div>
                                 </div>
