--- a/src/styles.css
+++ b/src/styles.css
@@ -9,17 +9,26 @@
 
 /* Loading */
 .loader {
-  border: 16px solid #f3f3f3; /* Light grey */
-  border-top: 16px solid #3498db; /* Blue */
+  border: 6px solid #f3f3f3;
   border-radius: 50%;
-  width: 20px;
-  height: 20px;
+  border-top: 6px solid blue;
+  border-right: 6px solid green;
+  border-bottom: 6px solid red;
+  width: 30px;
+  height: 30px;
+  -webkit-animation: spin 2s linear infinite;
   animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
 }
 
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
