--- a/src/app/client/profiles/create-article/create-article.component.html
+++ b/src/app/client/profiles/create-article/create-article.component.html
@@ -46,6 +46,7 @@
                                         <div class="form-group">
                                             <label class="col-form-label">Giới tính</label>
                                             <select id="province_id" [formControlName]="'rmGender'" class="form-control js-select-tinhthanhpho select2-hidden-accessible">
+                                                <option value="null">Chọn giới tính</option>
                                                 <option value="true">Nam</option>
                                                 <option value="false">Nữ</option>
                                             </select>
